// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test action action defiend after alias 1`] = `
Array [
  Object {
    "action": "arg",
    "arg": Object {},
    "id": "asdf",
  },
]
`;

exports[`test action action referencing action works as text 1`] = `
Array [
  Object {
    "action": "asdf",
    "arg": Object {},
    "id": "test %[arg]",
  },
]
`;

exports[`test action referencing undefined alias 1`] = `[Error: Undefined alias alias]`;

exports[`test action referencing undefined argument 1`] = `[Error: Undefined argument arg]`;

exports[`test action without correct identation error 1`] = `[SyntaxError: Expected "%", "@", "\\n", "~", correct indentation, or end of input but " " found.]`;

exports[`test action without sentences error 1`] = `[SyntaxError: Expected "\\n" or correct indentation but end of input found.]`;

exports[`test empty parser error 1`] = `[SyntaxError: Expected "%", "@", "\\n", or "~" but end of input found.]`;

exports[`test no actions error 1`] = `[Error: No actions found]`;
